--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="permission_rationale">Location permission is needed for core functionality</string>
     <string name="permission_denied_explanation">Permission was denied, but is needed for core
         functionality.</string>
+    <string name="permission_rationale_storage">Storage permission is needed for core functionality</string>
+
     <string name="settings">Settings</string>
     <string name="ok">OK</string>
     <string name="request_location_updates">Request location updates</string>
